--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,9 @@
-name: Ruby
-
+name: Test
 on:
   push:
     branches:
       - main
-
   pull_request:
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,16 +11,17 @@ jobs:
     strategy:
       matrix:
         ruby:
-          - '3.5.0'
-
+          - '3.2'
+          - '3.3'
+          - '3.4'
+          - 'head'
     steps:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true
-      - name: Run the default task
-        run: bundle exec rake
+      - run: sudo apt install -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
+      - run: bundle install
+      - run: bundle exec rake
